# libzakautho

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libautoz.pc.in  libzakautho.pc.in
docs/: DBChangeLog.sql  Makefile.am  schema.sql
docs/reference/: Makefile.am  autoz-decl-list.txt  autoz-decl.txt  autoz-docs.sgml  autoz-sections.txt  autoz-undocumented.txt  autoz-unused.txt  autoz.hierarchy  autoz.interfaces  autoz.prerequisites  autoz.types
docs/reference/tmpl/: autoz.sgml  resource.sgml  resource_interface.sgml  role.sgml  role_interface.sgml
src/: Makefile.am  autoz.c  autoz.h  resource.c  resource.h  resource_interface.c  resource_interface.h  role.c  role.h  role_interface.c  role_interface.h
tests/: Makefile.am  test.c  test_from_xml.c  test_from_xml.xml  test_from_xml_to_db.c  test_to_db.db
